Update code for new dependencies